<!-- res/menu/navigation_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/order"
        android:title="@string/title_orders" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />
    <item
        android:id="@+id/nav_summary"
        android:icon="@drawable/summary"
        android:title="@string/title_summary" />
    <item
        android:id="@+id/nav_language"
        android:icon="@drawable/ic_language"
        android:title="@string/title_language" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/title_logout" />
</menu>