<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_navigation"
    app:startDestination="@id/nav_orders">

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.task.appv2.screens.order.fragments.ListOrderFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_list_order" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.task.appv2.screens.order.fragments.HistoryOrderFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history_order" />
    <fragment
        android:id="@+id/nav_summary"
        android:name="com.task.appv2.screens.order.fragments.SummaryOrderFragment"
        android:label="@string/title_summary"
        tools:layout="@layout/fragment_summary_order" />

</navigation>