<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:background="@drawable/top_bg">
    <!--

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />-->
    <!--info user chef-->
    <include layout="@layout/layout_chef_info" />

    <!--  item Status detail-->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/status_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/space_s"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/new_status"
                style="@style/StatusTextStyle"
                android:drawableTop="@drawable/ic_new"
                android:drawablePadding="@dimen/space_xs"
                android:text="@string/label_new"
                android:textColor="@color/on_green_container" />

            <include layout="@layout/line" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/delayed_status"
                style="@style/StatusTextStyle"
                android:drawableTop="@drawable/ic_delayed"
                android:drawablePadding="@dimen/space_xs"
                android:text="@string/label_delayed"
                android:textColor="@color/holo_red" />

            <include layout="@layout/line" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/changed_status"
                style="@style/StatusTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_changed"
                android:drawablePadding="@dimen/space_xs"
                android:text="@string/label_changed"
                android:textColor="@color/primary" />

            <include layout="@layout/line" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cancelled_status"
                style="@style/StatusTextStyle"
                android:drawableTop="@drawable/ic_cancelled"
                android:drawablePadding="@dimen/space_xs"
                android:text="@string/LABEL_cancelled"
                android:textColor="@color/on_gray_container"
                app:drawableTint="@color/on_gray_container" />

        </LinearLayout>
    </HorizontalScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>
