<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_weight="1"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/space_s">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_s">

        <TextView
            style="@style/MyBodyLStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/almarai_bold"
            android:text="@string/label_order_type"
            android:textColor="@color/on_primary_container" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/gray_400"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/space_sm"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/space_sm"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/din_in_number"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.65"
                    android:textSize="@dimen/_18ssp"
                    android:fontFamily="@font/almarai_extrabold"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                    android:textColor="@color/on_primary_container"
                    tools:text="500" />

                <TextView
                    style="@style/MyLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.35"
                    android:gravity="center"
                    android:text="@string/label_dine_in"
                    android:textColor="@color/on_primary_container" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_sm"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/take_way_number"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.65"
                    android:fontFamily="@font/almarai_bold"
                    android:gravity="center"
                    android:textSize="@dimen/_18ssp"
                    android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                    android:textColor="@color/on_primary_container"
                    tools:text="400" />

                <TextView
                    style="@style/MyLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.35"
                    android:gravity="center"
                    android:text="@string/label_ot_take_way"
                    android:textColor="@color/primary_400" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_sm"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/delivery_number"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.65"
                    android:fontFamily="@font/almarai_extrabold"
                    android:gravity="center"
                    android:textSize="@dimen/_18ssp"
                    android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                    android:textColor="@color/on_green_container"
                    tools:text="400" />

                <TextView
                    style="@style/MyLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.35"
                    android:gravity="center"
                    android:text="@string/label_delivery"
                    android:textColor="@color/green_container" />
            </LinearLayout>

        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>
